--- a/Modules/MobileManager/Views/SystemTools/ViewDataValidation.xaml
+++ b/Modules/MobileManager/Views/SystemTools/ViewDataValidation.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<UserControl x:Class="Gijima.IOBM.MobileManager.Views.ViewDataValidation"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -9,7 +9,7 @@
              xmlns:CheckedListBox="clr-namespace:WPFDeveloperTools.Controls.CheckedListBox;assembly=WPFDeveloperTools.Controls"  
              xmlns:mm="clr-namespace:Gijima.IOBM.MobileManager.Common.Helpers;assembly=Gijima.IOBM.MobileManager.Common"            
              xmlns:prism="http://prismlibrary.com/"
-             xmlns:xcdg="http://schemas.xceed.com/wpf/xaml/datagrid" x:Class="Gijima.IOBM.MobileManager.Views.ViewDataValidation"
+             xmlns:xcdg="http://schemas.xceed.com/wpf/xaml/datagrid" 
              prism:ViewModelLocator.AutoWireViewModel="True"                   
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="800">
@@ -168,17 +168,6 @@
                     </DataTemplate>
                 </xctk:CheckListBox.ItemTemplate>
             </xctk:CheckListBox>
-            <!--<xcdg:DataGridControl x:Name="DataGridExceptions" Grid.Row="9" Grid.Column="2" Grid.ColumnSpan="3"  
-                TabIndex="4" ItemsSource="{Binding ValidationErrorCollection, UpdateSourceTrigger=PropertyChanged}" AutoCreateColumns="False">
-                --><!--<xcdg:Column FieldName="ckb1"  >
-                    <xcdg:Column.CellContentTemplate>
-                        <DataTemplate>
-
-                            <CheckBox IsChecked="{Binding IsChecked}" />
-                        </DataTemplate>
-                    </xcdg:Column.CellContentTemplate>
-                </xcdg:Column>--><!--
-            </xcdg:DataGridControl>-->
         </Grid>
     </Grid>
 </UserControl>
