--- a/Modules/MobileManager/Views/Billing/ViewBilling.xaml
+++ b/Modules/MobileManager/Views/Billing/ViewBilling.xaml
@@ -150,8 +150,22 @@
                     <local:ViewDataValidation Grid.Row="2" Grid.Column="0"/>
                 </Grid>                
             </xctk:WizardPage>
-            <xctk:WizardPage x:Name="WizardPage3" ExteriorPanelBackground="White" Title="Billing Wizard" Description="This Wizard page exposes functionality to validate and manage the external billing data for each external data provider." 
+            <xctk:WizardPage x:Name="WizardPage3" ExteriorPanelBackground="White" Title="Billing Wizard" Description="This Wizard page exposes functionality to import the external billing data for each external data provider." 
                 CanSelectNextPage="{Binding DataImportProcessCompleted, UpdateSourceTrigger=PropertyChanged}" NextPage="{Binding ElementName=WizardPage4}" PreviousPage="{Binding ElementName=WizardPage2}">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="10" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Billing:ViewDataImportExt Grid.Row="2" Grid.Column="0"/>
+                </Grid>
+            </xctk:WizardPage>
+            <xctk:WizardPage x:Name="WizardPage4" ExteriorPanelBackground="White" Title="Billing Wizard" Description="This Wizard page exposes functionality to validate and manage the external billing data for each external data provider." 
+                CanSelectNextPage="{Binding DataImportProcessCompleted, UpdateSourceTrigger=PropertyChanged}" NextPage="{Binding ElementName=WizardPage5}" PreviousPage="{Binding ElementName=WizardPage3}">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="10" />
